--- a/package.json
+++ b/package.json
@@ -4,15 +4,29 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "ts-node-dev src/server.ts",
+    "start": "tsc && node dist/server.js"
   },
   "author": "Mridul Pareek",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.1",
+    "@types/node": "^14.14.22",
+    "@types/roslib": "^1.1.1",
+    "@types/socket.io": "^2.1.13",
     "express": "^4.17.1",
-    "mongoose": "^5.9.25",
+    "gps-distance": "0.0.4",
     "nodemon": "^2.0.4",
-    "socket.io": "^2.3.0"
+    "roslib": "^1.1.0",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.3.3"
   }
 }
