--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.0"
 services:
         web:
                 build: .
+                command: npm start
                 ports:
                         - "8020:8020"
         labels:
