--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: mattywolfson/cloud-server:latest
+          tags: jacartjmu/cloud-server:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
